--- a/changelog.txt
+++ b/changelog.txt
@@ -20,7 +20,7 @@ Version: 4.0.0
   - The template does not require jQuery anymore
   - Removed jQuery and all the jQuery plugins
   - The assets/js/main.js was rewritten completely with vanilla Javascript. No more jQuery code
-  - Restructured the dev version for better development experience
+  - Restructured the dev version for better development experiences
   - Updated the PHP Email Form to V3.0 - No jQuery dependency. Added attachment support
 
 Version: 3.0.0
